Positioning header-container's elements

--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 
     <header>
         <div class="header-container">
-            <nav class="topbar">
-                <ul class="logo">
+            <nav class="topbar clearfix">
+                <ul class="logo fl">
                     <li>
                         <img src="img/logo.svg" alt="Discord logo">
                     </li>
                 </ul>
-                <ul class="header-menu">
+                <ul class="header-menu fl">
                     <li>Scarica</li>
                     <li>Perchè Discord</li>
                     <li>Nitro</li>
                     <li>Sicurezza</li>
                     <li>Assistenza</li>
                 </ul>
-                <ul>
+                <ul class="login fr">
                     <li>Accedi</li>
                 </ul>
             </nav>
