Login button setup

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li>Assistenza</li>
                 </ul>
                 <ul class="login fr">
-                    <li>Accedi</li>
+                    <li><button type="button">Accedi</button></li>
                 </ul>
             </nav>
         </div>
