--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
                 </ul>
             </nav>
         </div>
+
+        <div class="header-title">
+            <h1>Il tuo posto per parlare</h1>
+            <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un picolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+            <div class="header-title-buttons" >
+                <button type="button"><span class="down-arrow">&darr;</span>Scarica per Mac</button>
+                <button type="button">Apri Discord nel tuo browser</button>
+            </div>
+        </div>
     </header>
     
 </body>
