First-main-section after header completed

--- a/index.html
+++ b/index.html
@@ -39,6 +39,19 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <section class="first-main-section clearfix">
+            <div class="img-box fl"><img src="img/item1.svg" alt="Immagine canali con ranocchia"></div>
+            <div class="text-box fl">
+                <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
+                <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+            </div>
+
+        </section>
+
+
+    </main>
     
 </body>
 </html>
