--- a/index.html
+++ b/index.html
@@ -50,6 +50,38 @@
 
         </section>
 
+        <div class="bg-gray">
+            <section class="second-main-section clearfix">
+                <div class="text-box fl">
+                    <h1>Dove trovarsi è facile</h1>
+                    <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.</p>
+                </div>
+                <div class="img-box fl"><img src="img/item2.svg" alt="Immagine voice con mago e coniglio rosa"></div>
+            </section>
+        </div>
+
+        <section class="third-main-section clearfix">
+            <div class="img-box fl"><img src="img/item3.svg" alt="Immagine profilo e ruoli"></div>
+            <div class="text-box fl">
+                <h1>Da pochi a un fandom</h1>
+                <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
+            </div>
+        </section>
+
+        <div class="bg-gray">
+            <section class="fourth-main-section">
+                <div class="text-box">
+                    <h1>Tecnologia affidabile per tenersi in contatto</h1>
+                    <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                </div>
+                <div class="img-box"><img src="img/item4-big.svg" alt="Immagine conversazione su diversi dispositivi"></div>
+            </section>
+
+            <section class="adventure">
+                <h4>Pronto a iniziare la tua avventura?</h4>
+                <button type="button"><span class="down-arrow">&darr;</span>Scarica per Mac</button>
+            </section>
+        </div>
 
     </main>
     
