Main completed + hotfix css

--- a/index.html
+++ b/index.html
@@ -77,13 +77,18 @@
                 <div class="img-box"><img src="img/item4-big.svg" alt="Immagine conversazione su diversi dispositivi"></div>
             </section>
 
-            <section class="adventure">
-                <h4>Pronto a iniziare la tua avventura?</h4>
+            <section class="adventure-section">
+                <img src="img/stars.svg" alt="stelline colorate">
+                <h3>Pronto a iniziare la tua avventura?</h3>
                 <button type="button"><span class="down-arrow">&darr;</span>Scarica per Mac</button>
             </section>
         </div>
 
     </main>
+
+    <footer>
+        
+    </footer>
     
 </body>
 </html>
