Setup footer in html

--- a/index.html
+++ b/index.html
@@ -87,7 +87,76 @@
     </main>
 
     <footer>
-        
+        <section class="footer-column-container">
+            <div class="socials">
+                <ul>
+                    <li><h4>Il tuo posto per parlare</h4></li>
+                    <li><img src="img/ita.png" alt="Bandiera Italia"><span>Freccetta</span></li>
+                    <li>
+                        <ul>
+                            <li><img src="#" alt="logo twitter"></li>
+                            <li><img src="#" alt="logo instagram"></li>
+                            <li><img src="#" alt="logo facebook"></li>
+                            <li><img src="#" alt="logo youtube"></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="Prodotto">
+                <ul>
+                    <li>Prodotto</li>
+                    <li>Scarica</li>
+                    <li>Perchè Discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>
+                    <li>Assistenza</li>
+                </ul>
+            </div>
+            <div class="Compagnia">
+                <ul>
+                    <li>Compagnia</li>
+                    <li>Chi siamo</li>
+                    <li>Lavora con noi</li>
+                    <li>Marchio</li>
+                    <li>Redazione</li>
+                    <li>Negozio</li>
+                </ul>
+            </div>
+            <div class="Risorse">
+                <ul>
+                    <li>Risorse</li>
+                    <li>Scarica</li>
+                    <li>Perchè Discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>
+                    <li>Assistenza</li>
+                    <li>Scarica</li>
+                    <li>Perchè Discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>
+                </ul>
+            </div>
+            <div class="Norme">
+                <ul>
+                    <li>Norme</li>
+                    <li>Scarica</li>
+                    <li>Perchè Discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>
+                    <li>Assistenza</li>
+                </ul>
+            </div>
+        </section>
+
+        <hr>
+        <div class="footer-end-container clearfix">
+                <div class="logo fl">
+                    <img src="img/logo.svg" alt="Discord logo">    
+                </div>
+                <div class="login fr">
+                    <button type="button">Registrati</button>
+                </div>
+        </div>
     </footer>
     
 </body>
