--- a/index.html
+++ b/index.html
@@ -87,22 +87,22 @@
     </main>
 
     <footer>
-        <section class="footer-column-container">
-            <div class="socials">
+        <section class="footer-column-container clearfix">
+            <div class="socials fl">
                 <ul>
-                    <li><h4>Il tuo posto per parlare</h4></li>
-                    <li><img src="img/ita.png" alt="Bandiera Italia"><span>Freccetta</span></li>
-                    <li>
-                        <ul>
-                            <li><img src="#" alt="logo twitter"></li>
-                            <li><img src="#" alt="logo instagram"></li>
-                            <li><img src="#" alt="logo facebook"></li>
-                            <li><img src="#" alt="logo youtube"></li>
-                        </ul>
-                    </li>
+                    <li><h3>Il tuo posto per parlare</h3></li>
+                    <li><img src="img/ita.png" alt="Bandiera Italia"><span>Italiano &dtrif;</span></li>
                 </ul>
+                <div class="socials-logo">
+                    <ul>
+                        <li><img src="#" alt="logo twitter"></li>
+                        <li><img src="#" alt="logo instagram"></li>
+                        <li><img src="#" alt="logo facebook"></li>
+                        <li><img src="#" alt="logo youtube"></li>
+                    </ul>
+                </div>
             </div>
-            <div class="Prodotto">
+            <div class="column fl">
                 <ul>
                     <li>Prodotto</li>
                     <li>Scarica</li>
@@ -112,7 +112,7 @@
                     <li>Assistenza</li>
                 </ul>
             </div>
-            <div class="Compagnia">
+            <div class="column fl">
                 <ul>
                     <li>Compagnia</li>
                     <li>Chi siamo</li>
@@ -122,7 +122,7 @@
                     <li>Negozio</li>
                 </ul>
             </div>
-            <div class="Risorse">
+            <div class="column fl">
                 <ul>
                     <li>Risorse</li>
                     <li>Scarica</li>
@@ -136,7 +136,7 @@
                     <li>Sicurezza</li>
                 </ul>
             </div>
-            <div class="Norme">
+            <div class="column fl">
                 <ul>
                     <li>Norme</li>
                     <li>Scarica</li>
