--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </ul>
                 <div class="socials-logo">
                     <ul>
-                        <li><img src="#" alt="logo twitter"></li>
+                        <li><img src="img/twitter-logo.png" alt="logo twitter"></li>
                         <li><img src="#" alt="logo instagram"></li>
                         <li><img src="#" alt="logo facebook"></li>
                         <li><img src="#" alt="logo youtube"></li>
